--- a/ethereum-rar-tests/pom.xml
+++ b/ethereum-rar-tests/pom.xml
@@ -137,6 +137,11 @@
             <version>1.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+            <artifactId>ethereum-utils</artifactId>
+            <version>1.4.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.spec</groupId>
             <artifactId>jboss-javaee-all-8.0</artifactId>
             <scope>provided</scope>
